create github pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-0" data-rv-view="0" style="background-image: url(assets/images/landscape.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-0" data-rv-view="0" style="background-image: url(assets/images/mbr-10-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -40,17 +40,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">高雄．修休臉．美學</h3>
+                            <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">高雄．修休臉．美學</span></h3>
 
                             <div class="mbr-section-text">
-                                <p>＠fixxface</p>
+                                <p>＠fixxface &nbsp; &nbsp; &nbsp; &nbsp;face&amp;nails</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-warning" href="https://mobirise.com">最新消息leastest new</a> <a class="btn btn-danger" href="https://mobirise.com">服務項目menu</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-warning" href="news.html">最新消息leastest new</a> <a class="btn btn-danger" href="menu.html">服務項目menu</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/coworkers.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/1501338106550-796x591.jpg"></div>
                         </div>
 
                     </div>
@@ -64,7 +64,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
 
     
 
