create github pages

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
   <title>Home</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -46,7 +49,7 @@
                                 <p>＠fixxface &nbsp; &nbsp; &nbsp; &nbsp;face&amp;nails</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-warning" href="news.html">最新消息leastest new</a> <a class="btn btn-danger" href="menu.html">服務項目menu</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-warning" href="news.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>最新消息leastest new</a> <a class="btn btn-danger" href="menu.html"><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-btn"></span>服務項目menu</a> <a class="btn btn-success" href="menu.html"><span class="mbrib-rocket mbr-iconfont mbr-iconfont-btn"></span>產品簡介 products</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
@@ -64,7 +67,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build a website for free</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/c">web page maker</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -72,12 +75,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-6" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><img src="assets/images/table.jpg" class="card-img-top"></div>
+                  <div class="card-img"><img src="assets/images/img-2626-600x450.jpg" class="card-img-top"></div>
                   <div class="card-block">
-                    <h4 class="card-title">Bootstrap 4</h4>
-                    <h5 class="card-subtitle">Bootstrap 4 has been noted</h5>
-                    <p class="card-text">Bootstrap 4 has been noted as one of the most reliable and proven frameworks and Mobirise has been equipped to develop websites using this framework.</p>
-                    <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                    <h4 class="card-title">休修臉的成立，為的是讓辛苦的人們有一個能放鬆休息、沈澱自我、肌膚調養的發呆亭。<div>這可以瞭解到正確的保養觀念與方法、肌膚保養管理。</div><div>找回那流逝去的風采和自信，適合為了生活努力奮鬥的妳。</div><div>只給你們最好的❤️</div></h4>
+                    <h5 class="card-subtitle"></h5>
+                    <p class="card-text"></p>
+                    <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">地址maps</a></div>
                     </div>
                 </div>
             </div>
@@ -90,7 +93,7 @@
                         <h4 class="card-title">Responsive</h4>
                         <h5 class="card-subtitle">One of Bootstrap 4's big points</h5>
                         <p class="card-text">One of Bootstrap 4's big points is responsiveness and Mobirise makes effective use of this by generating highly responsive website for you.</p>
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">Facebook</a></div>
                     </div>
                 </div>
             </div>
@@ -106,9 +109,9 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
