--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-0" data-rv-view="0" style="background-image: url(assets/images/mbr-10-1620x1080.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-0" data-rv-view="0" style="background-image: url(assets/images/mbr-3-720x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -49,10 +49,10 @@
                                 <p>＠fixxface &nbsp; &nbsp; &nbsp; &nbsp;face&amp;nails</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-warning" href="news.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>最新消息leastest new</a> <a class="btn btn-danger" href="menu.html"><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-btn"></span>服務項目menu</a> <a class="btn btn-success" href="menu.html"><span class="mbrib-rocket mbr-iconfont mbr-iconfont-btn"></span>產品簡介 products</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-warning" href="news.html" target="_blank"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>最新消息leastest new</a> <a class="btn btn-danger" href="menu.html" target="_blank"><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-btn"></span>服務項目menu</a> <a class="btn btn-success" href="products.html" target="_blank"><span class="mbrib-rocket mbr-iconfont mbr-iconfont-btn"></span>產品簡介 products</a></div>
 
                         </div>
-                        <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
+                        <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 48%;">
                             <div class="mbr-figure"><img src="assets/images/1501338106550-796x591.jpg"></div>
                         </div>
 
@@ -67,7 +67,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -88,7 +88,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-6" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/desktop.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/img-2627-600x450.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Responsive</h4>
                         <h5 class="card-subtitle">One of Bootstrap 4's big points</h5>
