create github pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web page creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -105,7 +105,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-4" data-rv-view="10">
+<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-4" data-rv-view="6">
     <div class="mbr-figure">
         <div><img src="assets/images/image1.jpg"></div>
         <div class="mbr-figure-caption mbr-figure-caption-over">
