--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3" data-rv-view="8">
+<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3" data-rv-view="72">
     <div class="mbr-figure">
         <div><img src="assets/images/image1.jpg"></div>
         <div class="mbr-figure-caption mbr-figure-caption-over">
@@ -33,7 +33,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
