create github pages

--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item">32 GB storage</li><li class="list-group-item">Unlimited users</li><li class="list-group-item">15 GB bandwidth</li></ul></div>
+                      <div class="mbr-plan-list"></div>
                       <div class="mbr-plan-btn"><a href="https://mobirise.com" class="btn btn-black btn-black-outline">DEMO</a></div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item">32 GB storage</li><li class="list-group-item">Unlimited users</li><li class="list-group-item">15 GB bandwidth</li></ul></div>
+                      <div class="mbr-plan-list"></div>
                       <div class="mbr-plan-btn"><a href="https://mobirise.com" class="btn btn-black btn-black-outline">DEMO</a></div>
                     </div>
                 </div>
@@ -95,13 +95,13 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">體驗價$</span>
-                            <span class="mbr-price-figure"><strong>599</strong></span><small class="mbr-price-term">/ 90min.</small>
+                            <span class="mbr-price-figure"><strong>699</strong></span><small class="mbr-price-term">/ 90min.</small>
                           </div>
                           <small class="mbr-plan-price-desc"><br><span style="font-style: normal;">適合善敏感、乾燥、脫穴問題的肌膚，清除粉刺後加強舒緩安定，緩和皮膚發炎泛紅反應。<br>（拔粉刺/手清粉刺/舒緩導入/抗敏消炎軟膜）</span></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item">32 GB storage</li><li class="list-group-item">Unlimited users</li><li class="list-group-item">15 GB bandwidth</li></ul></div>
+                      <div class="mbr-plan-list"></div>
                       <div class="mbr-plan-btn"><a href="https://mobirise.com" class="btn btn-black btn-black-outline">DEMO</a></div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/g">create a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
