--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features3-1" data-rv-view="3" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -105,11 +105,23 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-4" data-rv-view="6">
-    <div class="mbr-figure">
-        <div><img src="assets/images/image1.jpg"></div>
-        <div class="mbr-figure-caption mbr-figure-caption-over">
-            <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2c" data-rv-view="149" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 90px;">
+    
+    <div class="container">
+        <div class="row">
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <div><img src="assets/images/s-13877260-128x128.jpg"></div>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p><br>／ 預約方式 ／<br><br>＿<br>Line＠行動條碼<br>＠llroo44b<br><a href="https://line.me/R/ti/p/%40llr0044b" target="_blank" class="text-primary">https://line.me/R/ti/p/%40llr0044b</a><br></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p>＿<br>Phone: 0988-856-272<br><br></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p>＿<br><strong><br></strong>instagram：<a href="https://www.instagram.com/fixxface/" target="_blank">fixxface</a></p>
+            </div>
+
         </div>
     </div>
 </section>
