--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free website builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-18" data-rv-view="25" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-18" data-rv-view="25" style="background-color: rgb(255, 255, 255);">
 
         
 
@@ -109,7 +109,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="28" style="background-color: rgb(35, 35, 35); padding-top: 2.625rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1b" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 2.625rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>- 高雄 休修臉 美學 -<br><br></p>
