--- a/page6.html
+++ b/page6.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web page builder</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="113" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="113" style="background-color: rgb(239, 239, 239);">
 
     
 
