--- a/page12.html
+++ b/page12.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Website Generator Description">
-  <title>Page 12</title>
+  <title>products2</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">build your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3b" data-rv-view="34" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3b" data-rv-view="34" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -75,7 +75,7 @@
 
     <div class="mbr-cards-row row striped">
 
-        <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 40px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/xlarge-600x600.jpg" class="card-img-top"></div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 40px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/xlarge-1-600x600.jpg" class="card-img-top"></div>
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 40px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/201606021625331-600x760.png" class="card-img-top"></div>
