--- a/products.html
+++ b/products.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-2l" data-rv-view="30">
+<section id="ext_menu-3a" data-rv-view="75">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,20 +58,22 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web page software</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-35" data-rv-view="25" style="background-image: url(assets/images/desert.jpg); padding-top: 200px; padding-bottom: 120px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
-    </div>
+<section class="engine"><a href="https://mobirise.co/g">create your own website for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3j" data-rv-view="73" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">ARTICLE HEADER</h3>
-                <div class="lead"><p>Article header with background image and parallax effect.</p></div>
-                
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2"></h3>
+                <small class="mbr-section-subtitle">&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;</small>
             </div>
         </div>
     </div>
+</section>
 
+<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-3g" data-rv-view="65">
+    <div class="mbr-figure">
+        <div><img src="assets/images/q1-1-1400x437.jpg"></div>
+        
+    </div>
 </section>
 
 <section class="mbr-section mbr-section__container" id="buttons1-36" data-rv-view="28" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
@@ -79,7 +81,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">醫美原液</a> <a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">精華液</a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">精華液</a> <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">精華液</a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="page10.html" target="_blank">醫美原液</a> <a class="btn btn-primary" href="page12.html" target="_blank">zuuth產品</a>  <a class="btn btn-black btn-black-outline" href="https://mobirise.com/mobirise-free-mac.zip">精華液</a></div>
             </div>
         </div>
     </div>
@@ -90,7 +92,6 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
