create github pages

--- a/page6.html
+++ b/page6.html
@@ -35,7 +35,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web page maker software</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="51" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-22" data-rv-view="51" style="background-color: rgb(239, 239, 239);">
 
     
 
