--- a/page12.html
+++ b/page12.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-3a" data-rv-view="32">
+<section id="ext_menu-3a" data-rv-view="79">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3b" data-rv-view="34" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3b" data-rv-view="81" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-3f" data-rv-view="36" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-3f" data-rv-view="83" style="background-color: rgb(255, 255, 255);">
 
         
 
