--- a/page14.html
+++ b/page14.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="ext_menu-3q" data-rv-view="90">
+<section id="ext_menu-3q" data-rv-view="93">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">how to create a website</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3r" data-rv-view="92" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-3r" data-rv-view="95" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -69,7 +69,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-3s" data-rv-view="94" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features1-3s" data-rv-view="97" style="background-color: rgb(255, 255, 255);">
 
         
 
